hoja de vida con estlis css

--- a/Hoja de Vida/Educacion.html
+++ b/Hoja de Vida/Educacion.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Educacion</title>
+        <link rel="stylesheet" type="text/css" href="EstiloHojaVida.css">
     </head>
     <body>
         <h1 align="left">EDUCACION</h1>
@@ -56,15 +57,15 @@
         <table>
             <tr>
                 <td>
-                    <a href="hojaVida.html"> Hoja de Vida</a>
+                    <a href="hojaVida.html" class="opcion_iluminada"> Hoja de Vida</a>
                 </td>
                 <td></td><td></td><td></td><td></td><td></td>
                 <td>
-                    <a href="PerfilProfesional.html"> Perfil Profesional</a>
+                    <a href="PerfilProfesional.html" class="opcion_iluminada"> Perfil Profesional</a>
                 </td>
                 <td></td><td></td><td></td><td></td><td></td>
                 <td>
-                    <a href="Experiencia.html"> Experiencia</a>
+                    <a href="Experiencia.html" class="opcion_iluminada"> Experiencia</a>
                 </td>
             </tr>
         </table>
