--- a/Hoja de Vida/Experiencia.html
+++ b/Hoja de Vida/Experiencia.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Experiencia</title>
+        <link rel="stylesheet" type="text/css" href="EstiloHojaVida.css">
     </head>
     <body>
         <h1 align="left">EXPERIENCIA LABORAL</h1>
@@ -43,15 +44,15 @@
         <table>
             <tr>
                 <td>
-                    <a href="hojaVida.html"> Hoja de Vida</a>
+                    <a href="hojaVida.html" class="opcion_iluminada"> Hoja de Vida</a>
                 </td>
                 <td></td><td></td><td></td><td></td><td></td>
                 <td>
-                    <a href="PerfilProfesional.html"> Perfil Profesional</a>
+                    <a href="PerfilProfesional.html" class="opcion_iluminada"> Perfil Profesional</a>
                 </td>
                 <td></td><td></td><td></td><td></td><td></td>
                 <td>
-                    <a href="Educacion.html">Educacion</a>
+                    <a href="Educacion.html" class="opcion_iluminada">Educacion</a>
                 </td>
             </tr>
         </table>
