--- a/Hoja de Vida/PerfilProfesional.html
+++ b/Hoja de Vida/PerfilProfesional.html
@@ -2,10 +2,11 @@
 <html>
     <head>
         <title>PERFIL PROFESIONAL</title>
+        <link rel="stylesheet" type="text/css" href="EstiloHojaVida.css">
     </head>
     <body>
-        <h1 align="center">PERFIL PROFESIONAL</h1>
-        <p align="center">
+        <h1>PERFIL PROFESIONAL</h1>
+        <p>
             Soy bachiller, actualmente estudiante universitaria de ingeniería de sistemas;<br>
             soy una persona comprometida con mi trabajo, con habilidad para adaptarme a   <br>
             cualquier situación y disposición para el trabajo en equipo, proactiva,       <br>
@@ -16,15 +17,15 @@
         <table>
             <tr>
                 <td>
-                    <a href="hojaVida.html"> Hoja de Vida</a>
+                    <a href="hojaVida.html" class="opcion_iluminada"> Hoja de Vida</a>
                 </td>
                 <td></td><td></td><td></td><td></td>
                 <td>
-                    <a href="Educacion.html"> Educacion</a>
+                    <a href="Educacion.html" class="opcion_iluminada"> Educacion</a>
                 </td>
                 <td></td><td></td><td></td><td></td>
                 <td>
-                    <a href="Experiencia.html"> Experiencia</a>
+                    <a href="Experiencia.html" class="opcion_iluminada"> Experiencia</a>
                 </td>
             </tr>
         </table>
