--- a/Hoja de Vida/hojaVida.html
+++ b/Hoja de Vida/hojaVida.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Hoja de Vida</title>
+        <link rel="stylesheet" type="text/css" href="EstiloHojaVida.css">
     </head>
     <body>
         <h1>Carlos Santiago Rojas Moreno</h1>
@@ -22,15 +23,15 @@
         <table>
             <tr>
                 <td>
-                    <a href="PerfilProfesional.html"> Perfil Profesional</a>
+                    <a href="PerfilProfesional.html" class="opcion_iluminada"> Perfil Profesional</a>
                 </td>
                 <td></td><td></td><td></td><td></td>
                 <td>
-                    <a href="Educacion.html"> Educacion</a>
+                    <a href="Educacion.html" class="opcion_iluminada"> Educacion</a>
                 </td>
                 <td></td><td></td><td></td><td></td>
                 <td>
-                    <a href="Experiencia.html"> Experiencia</a>
+                    <a href="Experiencia.html" class="opcion_iluminada"> Experiencia</a>
                 </td>
             </tr>
         </table>
